# cloudflare-blog

./: .gitguardian.yaml  LICENSE-BSD-Cloudflare  README.md
2015-12-nm-single-rx-queue/: Makefile  README.md  main.c
2016-03-slow-downloads/: README.md  nginx.conf  nginx_send_minimum_rate.patch
2016-04-bind-to-star/: duration-inet-lookup2.stp  histogram-kernel.stp  histogram-kernel2.stp
2016-08-time-out/: listener.go
2017-06-29-ssdp/: README.md  mmhistogram  mmsum  mmwatch
2017-10-accept-balancing/: README.md  benchhttp.go  blocking-accept.py  epoll-and-accept.py  nginx-reuseport.conf  nginx-shared-queue.conf
2017-11-perfect-locality/: README.md  accept.stp  locality.stp  setcbpf.stp
2018-01-syn-floods/: README.md  acceptq.stp  full-accept.py  full-syn.py  resq.stp
2018-03-ebpf/: README.md  ebpf.go  magic_conn.go  main.go
2018-07-dropping-packets/: Makefile  README.md  bpf-drop.c  busypoll-loop.c  ebpf-drop.c  ethtool-rx-packets.py  net.h  recv-loop.c  recvmmsg-loop.c  trunc-loop.c  xdp-drop-ebpf.c
2018-11-memory-refresh/: Makefile  analyze-dram.py  example-data.csv  measure-dram-movntdqa.c  measure-dram.c
2018-11-scm-rights/: Makefile  README.md
2019-01-io-submit/: Makefile  README.md  aio_passwd.c  aio_poll.c
2019-02-tcp-splice/: .gitignore  BENCHMARK.md  Makefile  README.md  bpf.h  bpf_helpers.h  common.h  echo-iosubmit.c  echo-naive.c  echo-sockmap-kern.c  echo-sockmap.c  echo-splice.c  echo-zero.c  iosubmit.h  list.h  net.c  tbpf-decode-elf.py  tbpf.c  tbpf.h  test-burst.c  zerocopy.c
2022-02-io_uring-worker-pool/: Cargo.toml
(+204 files in other folders)
